y.output

state 0
	$accept: .result $end 

	NUM  shift 5
	'*'  shift 6
	.  error

	address  goto 3
	target  goto 2
	term  goto 4
	octet_range  goto 7
	result  goto 1

state 1
	$accept:  result.$end 
	result:  result.comma target 

	$end  accept
	','  shift 9
	.  error

	comma  goto 8

state 2
	result:  target.    (1)

	.  reduce 1 (src line 47)


state 3
	target:  address.'/' mask 
	target:  address.    (6)

	'/'  shift 10
	.  reduce 6 (src line 76)


state 4
	address:  term.'.' term '.' term '.' term 

	'.'  shift 11
	.  error


state 5
	term:  NUM.    (8)
	octet_range:  NUM.'-' NUM 

	'-'  shift 12
	.  reduce 8 (src line 89)


state 6
	term:  '*'.    (9)

	.  reduce 9 (src line 90)


state 7
	term:  octet_range.    (10)

	.  reduce 10 (src line 91)


state 8
	result:  result comma.target 

	NUM  shift 5
	'*'  shift 6
	.  error

	address  goto 3
	target  goto 13
	term  goto 4
	octet_range  goto 7

state 9
	comma:  ','.    (3)
	comma:  ','.' ' 

	' '  shift 14
	.  reduce 3 (src line 58)


state 10
	target:  address '/'.mask 

	NUM  shift 16
	.  error

	mask  goto 15

state 11
	address:  term '.'.term '.' term '.' term 

	NUM  shift 5
	'*'  shift 6
	.  error

	term  goto 17
	octet_range  goto 7

state 12
	octet_range:  NUM '-'.NUM 

	NUM  shift 18
	.  error


state 13
	result:  result comma target.    (2)

	.  reduce 2 (src line 52)


state 14
	comma:  ',' ' '.    (4)

	.  reduce 4 (src line 58)


state 15
	target:  address '/' mask.    (5)

	.  reduce 5 (src line 60)


state 16
	mask:  NUM.    (12)

	.  reduce 12 (src line 95)


state 17
	address:  term '.' term.'.' term '.' term 

	'.'  shift 19
	.  error


state 18
	octet_range:  NUM '-' NUM.    (11)

	.  reduce 11 (src line 93)


state 19
	address:  term '.' term '.'.term '.' term 

	NUM  shift 5
	'*'  shift 6
	.  error

	term  goto 20
	octet_range  goto 7

state 20
	address:  term '.' term '.' term.'.' term 

	'.'  shift 21
	.  error


state 21
	address:  term '.' term '.' term '.'.term 

	NUM  shift 5
	'*'  shift 6
	.  error

	term  goto 22
	octet_range  goto 7

state 22
	address:  term '.' term '.' term '.' term.    (7)

	.  reduce 7 (src line 81)


10 terminals, 8 nonterminals
13 grammar rules, 23/16000 states
0 shift/reduce, 0 reduce/reduce conflicts reported
57 working sets used
memory: parser 16/240000
5 extra closures
19 shift entries, 1 exceptions
11 goto entries
6 entries saved by goto default
Optimizer space used: output 23/240000
23 table entries, 1 zero
maximum spread: 10, maximum offset: 21
